Fix footer on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@ body {
 }
 
 p {
-	margin: 0;
+  margin: 0;
+}
+
+#footer {
+  min-width: 510px;
 }
 
 .react-terminal a {
